--- a/page3.html
+++ b/page3.html
@@ -3,6 +3,8 @@
 	<body>
 
 	<a href="www.google.fr">lien google</a>
+	<a href="https://moodle.enise.fr/mod/page/view.php?id=16397">lien Moodle</a>
+
 
 	</body>
 </html>
